force-app/main/default/objects/Loopio__Loopio_Account_Project__c/Loopio__Loopio_Account_Project__c.object-meta.xml
<CustomObject>
    <description>This object represents a Loopio Account project.  These are intended to be created only by the Loopio integration, and all default fields will be managed by Loopio</description>
    <label>Loopio (Account)</label>
    <nameField>
        <label>Loopio Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loopio (Accounts)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>