force-app/main/default/objects/Loopio__Loopio_Account_Project__c/fields/Loopio__Account__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Loopio</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>