force-app/main/default/objects/Loopio__Loopio_Account_Project__c/fields/Loopio__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>