force-app/main/default/objects/Loopio__Loopio_Account_Project__c/fields/Loopio__Number_of_Assigned_Questions__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Number_of_Assigned_Questions__c</fullName>
    <description>Number of questions assigned to a user and awaiting submission</description>
    <label>Assigned Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>