force-app/main/default/objects/Loopio__Loopio_Account_Project__c/fields/Loopio__Number_of_Pending_Questions__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Number_of_Pending_Questions__c</fullName>
    <description>Number of questions pending action and that have not been assigned, submitted for review, or marked as complete</description>
    <label>Pending Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>