force-app/main/default/objects/Loopio__Loopio_Account_Project__c/fields/Loopio__Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Owner_Name__c</fullName>
    <label>Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>