force-app/main/default/objects/Loopio__Loopio_Account_Project__c/fields/Loopio__Total_Number_of_Questions__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Total_Number_of_Questions__c</fullName>
    <description>Total number of questions in the Project, regardless of state</description>
    <formula>Loopio__Number_of_Assigned_Questions__c +
Loopio__Number_of_Complete_Questions__c +
Loopio__Number_of_Pending_Questions__c +
Loopio__Number_of_Review_Questions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>